--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "vr-viz-web",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://mustafasaifee42.github.io/3D-VR-Viz/",
   "dependencies": {
     "@ibm/plex": "^1.0.1",
     "bootstrap": "^4.0.0",
@@ -16,6 +17,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.1.0"
   }
 }
