--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
+    "react-image-viewer": "^0.1.0",
+    "react-image-viewer-zoom": "^1.0.36",
+    "react-images": "^0.5.17",
     "react-markdown": "^3.3.0",
+    "react-photo-gallery": "^6.0.22",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1"
   },
