--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-image-viewer": "^0.1.0",
     "react-image-viewer-zoom": "^1.0.36",
     "react-images": "^0.5.17",
+    "react-loader-spinner": "^1.4.7",
     "react-markdown": "^3.3.0",
     "react-photo-gallery": "^6.0.22",
     "react-router-dom": "^4.2.2",
